--- a/UnitTests/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests/UnitTests.csproj
@@ -21,8 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Domain\Domain\Domain.csproj" />
-    <ProjectReference Include="..\..\Services\Services\Services.csproj" />
+    <ProjectReference Include="..\..\Domain\Domain\Domain.csproj">
+      <TreatAsUsed>true</TreatAsUsed>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
